fix issue on ios

--- a/src/app/components/feature/feature.component.tns.scss
+++ b/src/app/components/feature/feature.component.tns.scss
@@ -2,6 +2,7 @@
 .item-feature {
 	background-color: #ffffff;
 	border-color: #ffffff;
+	margin: 5;
 	.text {
 		color: #333333;
 		font-size: 14;
@@ -9,8 +10,8 @@
 		horizontal-align: left;
 	}
 	.icon {
-		color: #a3080c; 
-		font-size: 35;
+		color: #a3080c;
+		font-size: 28;
 		margin-top: 25;
 		text-align: right;
 	}
